# Stock-Sage

./: README.md
webapp/backend/: README.md  main.py  pyproject.toml  requirements.txt
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.js
webapp/frontend/src/: App.jsx
