[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.27.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]
